# generator-napi-module

./: .gitignore  .travis.yml  .yo-rc.json  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
__tests__/: app.js
generators/app/: index.js
generators/app/templates/: CMakeLists.txt  LICENSE  README.md  binding.gyp  index.js  package.cmake.json  package.gyp.json  package.json  package.ts.json  tsconfig.json
generators/app/templates/__tests__/: binding.js
generators/app/templates/lib/: binding.js  binding.ts
generators/app/templates/scripts/: preinstall.sh
generators/app/templates/src/: module.cc  module.h  module_intermediate.cc  module_intermediate.h
generators/app/templates/test/: hello.js  test_binding.js  test_binding.ts  test_binding_intermediate.js  test_binding_intermediate.ts
generators/app/templates/types/: index.d.ts  module.d.ts  module_intermediate.d.ts
src/app/: index.ts
